[gd_scene load_steps=3 format=3 uid="uid://cgnn6igsps6mn"]

[ext_resource type="Script" path="res://Scenes & Scripts/Screens/faction_selection.gd" id="1_kdl8j"]

[sub_resource type="LabelSettings" id="LabelSettings_o7w5b"]
line_spacing = 10.0
font_size = 30

[node name="FactionSelection" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kdl8j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 736.0
offset_top = 143.0
offset_right = 1196.0
offset_bottom = 289.0
text = "@interface_text_choose_faction"
label_settings = SubResource("LabelSettings_o7w5b")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BlueFaction" type="Button" parent="."]
layout_mode = 0
offset_left = 541.0
offset_top = 372.0
offset_right = 778.0
offset_bottom = 501.0
text = "@interface_text_faction_blue"

[node name="RedFaction" type="Button" parent="."]
layout_mode = 0
offset_left = 1087.0
offset_top = 365.0
offset_right = 1324.0
offset_bottom = 494.0
text = "@interface_text_faction_red"

[connection signal="pressed" from="BlueFaction" to="." method="_on_blue_faction_pressed"]
[connection signal="pressed" from="RedFaction" to="." method="_on_red_faction_pressed"]
